# itxllama

./: .gitignore  .gitmodules  README.md  building.md
WIN98-drivers/CWD-v286-1998-itx-llama/: CWDAUDIO.DRV  CWDAUDIO.INF  CWDAUDIO.INI  CWDAUDIX.VXD  CWDFM.DRV  CWDJOY.VXD  CWDMIDI.DRV  CWDMIDI.VXD  IUSV2860.CAT  README.TXT  readme v250.txt
WIN98-drivers/TBPLUS/: INSTALL.BAT  INSTALLD.BAT  INSTALLW.BAT  README.TXT  UNINST.BAT  UNINSTD.BAT  UNINSTW.BAT
WIN98-drivers/TBPLUS/PATCHES/: ATA0104.INF  ATA0104A.INF  ATA0106.INF  ATA0180.INF  DBLBUFF.SYS  DISKTSD.VXD  DISKVSD.VXD  ESDI_506.PDR  IO.SYS  IOS.VXD  SATA.INF  VFAT.VXD
WIN98-drivers/r6040_win98/: Netrdc.inf  RDCPCI5.SYS
attiny84/: platformio.ini
attiny84/src/: main.cpp
kicad/: ITX-Llama.kicad_prl  ITX-Llama.kicad_pro  ITX-Llama.kicad_sch  README.md  fp-lib-table  llama_shared.kicad_sym  sym-lib-table
kicad/3dmodels/: 0862-1J1T-46A-F.STEP  1-5145154-2.step  1734021-4.step  442060002.step  5176139.step  67800-8005.step  70543-0003.step  H1102NL--3DModel-STEP-269445.STEP  JA33333-DA18-4F-combined.step  T10W--3DModel-STEP-56544.STEP  USB1035-GF-P-0-B-B--3DModel-STEP-269445.STEP  b3fs-1000p.stp  c-5145263-3-a-3d.step
kicad/fabrication/: ITX-Llama-B_Cu.gbl  ITX-Llama-B_Mask.gbs  ITX-Llama-B_Paste.gbp  ITX-Llama-B_Silkscreen.gbo  ITX-Llama-Edge_Cuts.gm1  ITX-Llama-F_Cu.gtl  ITX-Llama-F_Mask.gts  ITX-Llama-F_Paste.gtp  ITX-Llama-F_Silkscreen.gto  ITX-Llama-In1_Cu.g2  ITX-Llama-In2_Cu.g3  ITX-Llama-NPTH-drl_map.gbr  ITX-Llama-NPTH.drl  ITX-Llama-PTH-drl_map.gbr  ITX-Llama-PTH.drl  ITX-Llama-v1revE-BOM.xlsx  ITX-Llama-v1revE-all-pos.xlsx  ITX-Llama-v1revF-BOM.xlsx  ITX-Llama-v1revF-pos.xlsx
kicad/llama_shared.pretty/: BT_BS-02-A1AJ006.kicad_mod  CP_Elec_10x12.6.kicad_mod  C_0402_1005Metric.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  C_1206_3216Metric.kicad_mod  C_1210_3225Metric.kicad_mod  C_1808_4520Metric.kicad_mod  C_1812_4532Metric.kicad_mod  D_LED_D5.0mm-4_RGB.kicad_mod  H_ATX.kicad_mod  H_ATX_PERF.kicad_mod  J_ATX_4.2mm.kicad_mod  J_ATX_5.5mm.kicad_mod  J_AUDIO35_C95463.kicad_mod  J_AUDIO_ABA-JAK-027-K24.kicad_mod  J_CONN_02X02.kicad_mod  J_CONN_02X05.kicad_mod  J_CONN_02X05_RIGHT_ANGLE.kicad_mod  J_CONN_02X10.kicad_mod  J_CONN_CD_AUDIO.kicad_mod  J_CONN_RPI_SMD.kicad_mod  J_CONN_RPI_SMD_PI3.kicad_mod  J_CONN_WAVETABLE.kicad_mod  J_DA15.kicad_mod  J_DE9M.kicad_mod  J_DF40C-100DP-0.4V.kicad_mod  J_DF40HC(3.0)-100DS-0.4V.kicad_mod  J_ISA_16BIT.kicad_mod  J_ISA_16BIT_CUT.kicad_mod  J_MOLEX_47053-1000.kicad_mod  J_MicroSD_TF01A.kicad_mod  J_PS2_KMDGX.kicad_mod  J_SATA.kicad_mod  J_TE_5145263-3.kicad_mod  J_TOSLINK_ZGY133T10.kicad_mod  J_USB_A_C12049.kicad_mod  J_USB_A_C456021.kicad_mod  J_USB_A_ETH_C3000093.kicad_mod  J_WEMOS_D1_MINI.kicad_mod  (+54 more)
kicad/opl3module/: fp-lib-table  opl3module.kicad_pcb  opl3module.kicad_prl  opl3module.kicad_pro  opl3module.kicad_sch  sym-lib-table
kicad/opl3module/fabrication/: opl3module-BOM.xlsx  opl3module-B_Cu.gbl  opl3module-B_Mask.gbs  opl3module-B_Paste.gbp  opl3module-B_Silkscreen.gbo  opl3module-Edge_Cuts.gm1  opl3module-F_Cu.gtl  opl3module-F_Mask.gts  opl3module-F_Paste.gtp  opl3module-F_Silkscreen.gto  opl3module-In1_Cu.g2  opl3module-In2_Cu.g3  opl3module-NPTH-drl_map.gbr  (+4 more)
mechanical/fan_mount/: README.md  fan_mount.md  fan_mount_frame.step  fan_mount_nut.step  fan_nut.step  fan_screw.step
rp2040/: BUILD.md  CMakeLists.txt  FLASH.md  main.c  tusb_config.h
